--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@neondatabase/serverless": "^1.0.1",
+    "@types/pg": "^8.11.0",
+    "pg": "^8.11.3",
     "@remix-run/dev": "^2.16.8",
     "@remix-run/node": "^2.16.8",
     "@remix-run/react": "^2.16.8",
@@ -28,7 +29,6 @@
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
     "@types/uuid": "^10.0.0",
-    "@types/ws": "^8.18.1",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
     "connect-pg-simple": "^10.0.0",
