--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
 
   db:
     image: postgres:16-alpine
+    ports:
+      - "5433:5432"
     environment:
       - POSTGRES_DB=toolshed
       - POSTGRES_USER=toolshed
