docs: update .env.example with development database configuration
- Added comments for local development with Docker database
- Included localhost:5433 configuration example
- Clarified production vs development database URLs
- Maintained backward compatibility for existing deployments

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,11 @@
 # Copy this file to .env and customize values for your deployment
 
 # Database Configuration
-# For Docker: Use the default database service
+# For Docker Compose (production): Use the internal database service
 DATABASE_URL=postgresql://toolshed:toolshed@db:5432/toolshed
+
+# For local development with Docker database:
+# DATABASE_URL=postgresql://toolshed:toolshed@localhost:5433/toolshed
 
 # For external database (production):
 # DATABASE_URL=postgresql://username:password@your-db-host:5432/toolshed
