feat: implement comprehensive item quantity vs reservation validation
- Add ItemUpdateValidationService for quantity change validation
- Prevent reducing item quantity below active reservation needs
- Add timeline analysis for complex overlapping reservation patterns
- Integrate validation into item update/delete API endpoints
- Add 16 comprehensive edge case tests covering:
  * Quantity reduction below active needs
  * Complex overlapping reservation scenarios
  * Item deletion with active reservations
  * Mixed quantity overlapping patterns
  * Zero/negative quantity validation
  * API integration validation

Fixes critical data integrity issue where item quantities could be
reduced below what active reservations require, preventing impossible
booking scenarios.

Tests: 72 passed (72) - All edge cases thoroughly validated

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "remix dev",
     "start": "remix-serve build/index.js",
     "typecheck": "tsc",
-    "test": "vitest",
+    "test": "vitest run",
     "test:run": "vitest run",
     "test:watch": "vitest watch",
     "test:coverage": "vitest run --coverage"
