--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "test": "vitest run",
     "test:run": "vitest run",
     "test:watch": "vitest watch",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "db:setup": "tsx database/scripts/setup.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "tsx database/scripts/migrate.ts migrate",
+    "db:status": "tsx database/scripts/migrate.ts status",
+    "db:validate": "tsx database/scripts/migrate.ts validate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
