refactor: break down selenium tests into isolated epic files
- Split monolithic userStories.test.ts into 3 epic-specific files
- Epic 1: User Registration and Authentication (12 tests)
- Epic 2: Tool Management (7 tests)
- Epic 3: Tool Discovery (10 tests)
- Added shared setup for common test utilities and configuration
- Created epic test runner with options for individual or all epics
- Added npm scripts for easy epic testing (test:epic:1, test:epic:2, etc.)
- Included comprehensive documentation and migration guide
- Enables isolated testing, faster debugging, and parallel execution
- Preserves original file as userStories-DEPRECATED.test.ts

--- a/package.json
+++ b/package.json
@@ -25,7 +25,16 @@
     "test:e2e:demo": "tsx test/e2e/demo.ts",
     "test:e2e:demo:headless": "HEADLESS=true tsx test/e2e/demo.ts",
     "test:e2e:flows": "tsx test/e2e/criticalFlowsRunner.ts",
-    "test:e2e:flows:headless": "HEADLESS=true tsx test/e2e/criticalFlowsRunner.ts"
+    "test:e2e:flows:headless": "HEADLESS=true tsx test/e2e/criticalFlowsRunner.ts",
+    "test:epic": "tsx test/e2e/tests/epics/run-epics.ts",
+    "test:epic:all": "tsx test/e2e/tests/epics/run-epics.ts all",
+    "test:epic:all:headless": "tsx test/e2e/tests/epics/run-epics.ts all --headless",
+    "test:epic:1": "npm test -- test/e2e/tests/epics/epic1-auth.test.ts",
+    "test:epic:2": "npm test -- test/e2e/tests/epics/epic2-tool-management.test.ts",
+    "test:epic:3": "npm test -- test/e2e/tests/epics/epic3-tool-discovery.test.ts",
+    "test:epic:1:headless": "HEADLESS=true npm test -- test/e2e/tests/epics/epic1-auth.test.ts",
+    "test:epic:2:headless": "HEADLESS=true npm test -- test/e2e/tests/epics/epic2-tool-management.test.ts",
+    "test:epic:3:headless": "HEADLESS=true npm test -- test/e2e/tests/epics/epic3-tool-discovery.test.ts"
   },
   "keywords": [],
   "author": "",
