chore: improve E2E test setup and documentation
- Move node-fetch to main dependencies for health checks
- Add comprehensive E2E test documentation
- Enhance browser configuration for better test stability
- Improve server readiness checks in critical flows
- Add better error handling in test cleanup

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jsdom": "^26.0.0",
     "jsonwebtoken": "^9.0.2",
     "memoizee": "^0.4.17",
+    "node-fetch": "^3.3.2",
     "openid-client": "^6.5.1",
     "passport": "^0.7.0",
     "pg": "^8.11.3",
