chore: update .gitignore to track Drizzle migration files
Modify .gitignore to:
- Allow tracking of database/migrations/meta/
- Allow tracking of drizzle/migrations/
- Keep ignoring other Drizzle artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -241,8 +241,11 @@ postgres_data/
 *.db-journal
 
 # Drizzle
-drizzle/
-meta/
+# Allow migration files but ignore other Drizzle artifacts
+drizzle/*
+!drizzle/migrations/
+meta/*
+!database/migrations/meta/
 
 # Misc
 *.tgz
